@@ -6,6 +6,8 @@
 
  - Rename mo_maxchicken -> mo_custom_maxchicken and scale it per player.
 
+ - Get the real count of human Teams (no dead or taken teams) for minRobots/maxRobots.
+
 0.1.6 -> 0.2.0
  2018-01-11
 
